# acrossfc

./: .gitignore  2024-06-13  Makefile  README.md  database.py  deleteme.py  fflogs_client.py  lambda_build.sh  lambda_handler.py  main.py  model.py  pyproject.toml  requirements.txt
acrossfc/: __init__.py  utils.py
acrossfc/admin/: discord.py  register_bot_commands.py
acrossfc/analytics/: __init__.py  clear_chart.py  clear_order.py  clear_rates.py  cleared_jobs_by_member.py  cleared_roles.py  fc_roster.py  legends.py  ppl_with_clear.py  ppl_without_clear.py  who_cleared_recently.py
acrossfc/api/: __init__.py  analytics.py  fc_roster.py  main.py  participation_points.py  submissions.py
acrossfc/core/: config.py  constants.py  database.py  model.py  points.py  points_evaluator.py
acrossfc/etl/: __init__.py  clears_etl.py  daily_clears_etl.py  daily_update_fflogs_fc.py  etl_job_base.py  fc_clears_etl.py  fc_roster_etl.py  monthly_fc_roster_etl.py  update_fflogs_fc.py
acrossfc/ext/: ddb_client.py  discord_client.py  dynamodb_client.py  fflogs_client.py  google_cloud_client.py  s3_client.py
acrossfc/reports/: __init__.py  clear_chart.py  clear_order.py  clear_rates.py  cleared_jobs_by_member.py  cleared_roles.py  fc_roster.py  legends.py  ppl_with_clear.py  ppl_without_clear.py  who_cleared_recently.py
acrossfc_api/: config.py  database.py  fflogs_client.py  main.py
acrossfc_api/core/: database.py  model.py
acrossfc_api/ext/: fflogs_client.py
acrossfc_api/reports/: clear_chart.py  clear_order.py  clear_rates.py  cleared_jobs_by_member.py  cleared_roles.py  fc_roster.py  gapi.py  ppl_with_clear.py  ppl_without_clear.py  report.py  (+1 more)
ffxiv_clear_rates/: __init__.py  config.py  database.py  fflogs_client.py  main.py  model.py
ffxiv_clear_rates.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lambda/: acrossfc_bot.py  api_acrossfc_bot.py  api_acrossfc_com.py  api_ax_clear_rates.py  api_get_clear_rates.py  daily_clears_etl.py  daily_fc_clears_etl.py  daily_update_fflogs_fc.py  deploy.sh  ffxiv_clear_rates.py  ffxiv_clear_rates_daily.py  lambda_build.sh  monthly_fc_roster_etl.py  publish_fc_roster.py  update_fflogs.py
reports/: __init__.py  clear_chart.py  clear_order.py  clear_rates.py  cleared_jobs_by_member.py  cleared_roles.py  fc_roster.py  ppl_with_clear.py  ppl_without_clear.py  who_cleared_recently.py
tests/: dev_api_server.py  test_points_evaluator.py
(+12 files in other folders)
